--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="author" content="Matevž Kovačič" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <script type="module" src="./main.js" defer></script>
-        <link href="./styles.css" rel="stylesheet" defer />
+        <script type="module" src="main.js" defer></script>
+        <link href="styles.css" rel="stylesheet" defer />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet" />
@@ -76,10 +76,7 @@
                 <button class="buttons" id="submitBtn" type="button">Submit</button><br /><br />
 
                 <div class="results">
-                    <p id="results">
-                        <!--eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager, eager,
-                        eager, eager, eager, eager, eager-->
-                    </p>
+                    <p id="results"></p>
                 </div>
             </div>
         </div>
