--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <meta name="author" content="Matevž Kovačič" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <script type="module" src="main.js" defer></script>
+        <script type="text/javascript" src="main.js" defer></script>
+        <script type="text/javascript" src="dictionary.js" defer></script>
         <link href="styles.css" rel="stylesheet" defer />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
